--- a/final_project/guidelines/index.html
+++ b/final_project/guidelines/index.html
@@ -231,6 +231,31 @@
 <ul>
   <li>You need to submit the propsoal here: <a href="https://forms.gle/y3Sub6GZQKqEGaRQA">https://forms.gle/y3Sub6GZQKqEGaRQA</a></li>
 </ul>
+<p><br /></p>
+
+<h1 id="progress-report-30">Progress Report (30%)</h1>
+
+<p>Up until this point, you should have implemented a preliminary  and simple version of your idea, this implementation doesn’t have to be fully optimized at this point,  and it doesn’t have to contain all the features you want yet.
+You must report these items:</p>
+
+<ol>
+  <li><strong>Proposed</strong> <strong>a</strong><strong>lgorithm</strong>: Describe your proposed algorithm for solving the problem in detail, use a concrete example to show how your model and algorithm work. Your description must be precise and specific (what are your model’s inputs, outputs, variables, etc.).</li>
+  <li><strong>Results:</strong> Report the experimental results of using this basic version of implementation and compare the results with the baseline methods. Descriptions should be quantitative (using tables, metrics, plots, etc.). Explain whether you were expecting these results or not.</li>
+  <li><strong>Performance</strong> <strong>i</strong><strong>mprovement</strong> <strong>p</strong><strong>lan</strong>: Explain your plan for improving the results in the future (e.g. you can look for the flaws in the proposed method, try to find a way to fix them, or you can simply search for a more advanced model than what you already have). Note that you must implement these suggestions and put them to use for the final version.</li>
+</ol>
+
+<p><strong># Deliverables:</strong></p>
+<ul>
+  <li>A write-up in PDF format.</li>
+  <li>Submit the PDF file via <a href="https://forms.gle/dB1JTTjSjvGPbCGz8">https://forms.gle/dB1JTTjSjvGPbCGz8</a>.</li>
+  <li>5 minute presentation on the current state of your project (no slides)</li>
+</ul>
+
+<p>Scores:</p>
+<ol>
+  <li>PDF Report: 20%</li>
+  <li>Presentation: 10%</li>
+</ol>
 
 
 
