--- a/final_project/index.html
+++ b/final_project/index.html
@@ -200,6 +200,7 @@
     <h1>Important Dates</h1>
     <ul>
       <li>Proposal deadline: <span style='font-weight: bold'>1399/1/15</span></li>
+	  <li>Progress report deadline: <span style='font-weight: bold'>1399/3/6</span></li>
     </ul>
   
     Please read the <a href='/982/final_project/guidelines'>Final Project Guidelines</a> carefully, We'll guide you through all details you need.
