--- a/final_project/guidelines/index.html
+++ b/final_project/guidelines/index.html
@@ -248,7 +248,7 @@ You must report these items:</p>
 <ul>
   <li>A write-up in PDF format.</li>
   <li>Submit the PDF file via <a href="https://forms.gle/dB1JTTjSjvGPbCGz8">https://forms.gle/dB1JTTjSjvGPbCGz8</a>.</li>
-  <li>5 minute presentation on the current state of your project (no slides)</li>
+  <li>5 minute presentation on the current state of your project (with slides)</li>
 </ul>
 
 <p>Scores:</p>
