--- a/assignments/03_Computer_Vision.html
+++ b/assignments/03_Computer_Vision.html
@@ -238,7 +238,7 @@
 <ol>
   <li>Click on <strong>Download [problems]</strong> to obtain the assignment jupyter notebook.</li>
   <li>Go to <a href="https://colab.research.google.com">https://colab.research.google.com/</a>.</li>
-  <li>Switch to Upload tab, choose <code>assignment_2.ipynb</code> and click upload.</li>
+  <li>Switch to Upload tab, choose <code>Assignment_3.ipynb</code> and click upload.</li>
   <li>Now You’re ready to go.</li>
 </ol>
 
