--- a/index.html
+++ b/index.html
@@ -212,6 +212,14 @@
     <ul>
 	
 	<li class="no-p-margin">
+		
+			
+				New Assignment released: [<a href="/982/assignments/03_Computer_Vision.html">Assignment #3 - Computer Vision</a>]
+			
+		
+	</li>
+	
+	<li class="no-p-margin">
             
                 
                     New Assignment released: [<a href="/982/assignments/02_Getting_Started_with_Keras.html">Assignment #2 - Getting Started with Keras</a>]
