--- a/index.html
+++ b/index.html
@@ -210,6 +210,14 @@
 <div class="announcement-box" style="margin-top:30px">
     <h2>Announcements</h2>
     <ul>
+	
+	<li class="no-p-margin">
+		
+			
+				New Assignment released: [<a href="/982/assignments/04_Transformer_and_BERT.html">Assignment #4 - Transformer and BERT</a>]
+			
+		
+	</li>
 	<li class="no-p-margin">
             
                 
