--- a/static_files/assignments/assignment_4_preview.html
+++ b/static_files/assignments/assignment_4_preview.html
@@ -13539,7 +13539,7 @@ Unlike the transformer, which uses fixed positional embeddings, BERT uses learne
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Now you should complete the <strong>create_BERT</strong> function in the cell below. This function get BERT's hyper-parameters as its inputs and return a BERT model. Use the functional api to create the model.<br>
+<p>Now you should complete the <strong>create_BERT</strong> function in the cell below. This function gets BERT's hyper-parameters as its inputs and return a BERT model. Use the functional api to create the model.<br>
 Note that the returned model must have two outputs (just like the pre-trained BERTs):</p>
 <ul>
 <li>The hidden states of the last encoder layer</li>
@@ -13554,14 +13554,22 @@ Note that the returned model must have two outputs (just like the pre-trained BE
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">create_BERT</span><span class="p">(</span><span class="n">vocab_size</span><span class="p">,</span>
-                <span class="n">maxlen</span><span class="p">,</span>
-                <span class="n">hidden_size</span><span class="p">,</span>
-                <span class="n">num_layers</span><span class="p">,</span>
-                <span class="n">num_att_heads</span><span class="p">,</span>
-                <span class="n">intermediate_size</span><span class="p">,</span>
-                <span class="n">drop_rate</span><span class="o">=</span><span class="mf">0.1</span>
-                <span class="p">):</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">create_BERT</span><span class="p">(</span><span class="n">vocab_size</span><span class="p">,</span> <span class="n">maxlen</span><span class="p">,</span> <span class="n">hidden_size</span><span class="p">,</span> <span class="n">num_layers</span><span class="p">,</span> <span class="n">num_att_heads</span><span class="p">,</span> <span class="n">intermediate_size</span><span class="p">,</span> <span class="n">drop_rate</span><span class="o">=</span><span class="mf">0.1</span><span class="p">):</span>
+
+  <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">  creates a BERT model based on the arguments provided</span>
+
+<span class="sd">        Arguments:</span>
+<span class="sd">        vocab_size: number of words in the vocabulary</span>
+<span class="sd">        maxlen: maximum length of each sentence</span>
+<span class="sd">        hidden_size: dimension of the hidden state of each encoder layer</span>
+<span class="sd">        num_layers: number of encoder layers</span>
+<span class="sd">        num_att_heads: number of attention heads in the multi-headed attention layer</span>
+<span class="sd">        intermediate_size: dimension of the intermediate layer in the feed-forward sublayer of the encoders</span>
+<span class="sd">        drop_rate: dropout rate of all the dropout layers used in the model</span>
+<span class="sd">        returns: </span>
+<span class="sd">        model: a BERT model </span>
+<span class="sd">  &quot;&quot;&quot;</span>
   
   <span class="c1">########################################</span>
   <span class="c1">#     Put your implementation here     #</span>
@@ -13914,7 +13922,7 @@ Note that the intermediate layer in the feed-forward sub-layer of the encoders i
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1">#@title Attentoin Head Visualization</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1">#@title Attentoin Heads Visualization</span>
 <span class="n">sent</span> <span class="o">=</span> <span class="s2">&quot;I hated that movie&quot;</span><span class="c1">#@param {type:&quot;string&quot;}</span>
 <span class="n">toks</span><span class="p">,</span> <span class="n">atts</span> <span class="o">=</span> <span class="n">get_att_tok</span><span class="p">(</span><span class="n">model</span><span class="p">,</span> <span class="n">sent</span><span class="o">.</span><span class="n">lower</span><span class="p">())</span>
 <span class="n">call_html</span><span class="p">()</span>
