final project files added

--- a/final_project/guidelines/index.html
+++ b/final_project/guidelines/index.html
@@ -256,6 +256,69 @@ You must report these items:</p>
   <li>PDF Report: 20%</li>
   <li>Presentation: 10%</li>
 </ol>
+<p><br /></p>
+
+<h1 id="final-report-50">Final Report (50%)</h1>
+
+<p>Your final report is the most important part of your project, and it must be comprehensive, precise, and clear. It demonstrates how well you understood the problem and the changes that you might face to solve such a problem. It also conveys your understanding of the course’s materials. Your report should contain the following parts.</p>
+
+<ol>
+  <li><strong>Abstract</strong>: You should give a brief introduction of your problem and the solution that you have provided</li>
+  <li><strong>Introduction</strong>: In this part, you should explain the problem or the task you want to solve and demonstrate the challenges that you may face during solving this problem.</li>
+  <li><strong>Related work</strong><strong>/Background</strong>: A concise explanation of two to three recent works that had proposed an approach to overcome or solve the problem. These works might have found a solution for different settings of this problem.</li>
+  <li><strong>Proposed method</strong>: In this section, you must provide a comprehensive explanation of your final improved method to solve this problem. Some of the things that you should describe in the report are the following items:
+    <ul>
+      <li>Any kind of preprocessing or normalization (if you have used).</li>
+      <li>The architecture of the neural network that you have used. It is better to demonstrate this with a graph.</li>
+    </ul>
+  </li>
+  <li><strong>Results</strong>: At first, you should describe the dataset that you have used, and then, you must describe the experiments that you maid, and its results. It is better to test your proposed method in different settings and with various parameters.</li>
+  <li><strong>Discussion</strong>: In this section, you will discuss your proposed method to solve the problem. Some of the questions that you might find useful to answer are:
+    <ul>
+      <li>Why is this specific type of Deep Neural Networks suitable for this task?</li>
+      <li>What are the benefits of your proposed model against other approaches?</li>
+    </ul>
+  </li>
+  <li><strong>References</strong>: You must cite all of the papers and codes that you have used in your project.</li>
+</ol>
+
+<p>You will not be penalized if your system performs poorly, if you analyze the model output and explain why it failed which is much more important to us. Your report will be graded based on its quality. By quality, we mean how well you explained, expanded, and conveyed your problem and its challenges; how well you could persuade usage of a specific model for solving a particular task, your results and implementation, your writing quality, and your understanding of the problem and Deep Learning tools.</p>
+
+<p>To have an estimate of how much and how well you should write this report please look at the <a href="http://cs229.stanford.edu/proj2018/">here</a> and <a href="http://cs229.stanford.edu/proj2017/">here</a></p>
+
+<p><strong>Note</strong>: If you have used any paper or code in your project you must cite that paper/code, and you also must clarify your contribution to the code/paper.</p>
+
+<p><strong>Note</strong>: We have prepared a template for your final report, and you should put your report in this template. This template has been prepared in Persian and English, and you are free to write in any language you are comfortable with.</p>
+
+<p><strong>Download LaTeX Templates:</strong></p>
+<ul>
+  <li>English: [<a href="/982/static_files/final_report_template_english.zip">zip</a>] </li>
+  <li>Persian: [<a href="/982/static_files/final_report_template_persian.zip">zip</a>] </li>
+</ul>
+
+<p><strong># Deliverables:</strong></p>
+<ul>
+  <li>Your write-up in PDF format.</li>
+  <li>Github repository for your project, Put a link to this website on the description.</li>
+  <li>Jupyter notebook of your project with reproducable experiments.</li>
+  <li>Detailed description of each member’s responsibilities.</li>
+  <li>Submit the package via <a href="https://forms.gle/wT4niz7JzHYgu4MU9">https://forms.gle/wT4niz7JzHYgu4MU9</a></li>
+</ul>
+
+<p><br /></p>
+
+<h1 id="presentation-20">Presentation (20%)</h1>
+<p>After all you should present your research, developments and results in a <strong>15</strong><strong>-</strong><strong>minuet</strong> <strong>presentation</strong>. You have to present the problem, describe the solution, challenges, show the results and a demo. We are interested in seeing charts, graphs and various examples. The main factor for score calculation is the quality of presentation.</p>
+
+<p>For examples consider “<a href="https://rajpurkar.github.io/SQuAD-explorer/explore/v2.0/dev/Geology.html?model=BERT%20(single%20model)%20(Google%20AI%20Language)&amp;version=v2.0">Question answering super model</a>” as the subject of project.</p>
+
+<ul>
+  <li>First you have to define the problem and explain why it is needed: The question answering super model receives an input context (~300 words) and a question. Then, the system has to search the context and find an answer. In this step of presentation it’s good to quickly show the demo and test it for audience.</li>
+  <li>Then explain the applications; for example  one can ask a a bot a question and the bot should look up all relevant web page in search of an answer. Then, the answers should be represented  in terms of a few meaningful sentences that may not have existed in those web pages.</li>
+  <li>Then you should answer this question: Is deep-learning suitable for solving this problem?</li>
+  <li>Explain the specific method that you used and why it is suitable (LSTM in this example). After this you can show charts of results and how you measure this model. This is when we are interested in listening to details about your network. Also you can be creative in your presentation to make it more interesting.</li>
+  <li>Show us the analysis you have performed on the outputs of your model. Explain the weaknesses and strengths of your model. Describe the challenges you faced and how you have overcome them. Also, if applicable, explain how you collected the dataset?</li>
+</ul>
 
 
 
