--- a/final_project/index.html
+++ b/final_project/index.html
@@ -201,6 +201,8 @@
     <ul>
       <li>Proposal deadline: <span style='font-weight: bold'>1399/1/15</span></li>
 	  <li>Progress report deadline: <span style='font-weight: bold'>1399/3/6</span></li>
+	  <li>Project presentation session: <span style='font-weight: bold'>1399/5/26</span></li>
+	  <li>Final report deadline: <span style='font-weight: bold'>1399/5/28</span></li>
     </ul>
   
     Please read the <a href='/982/final_project/guidelines'>Final Project Guidelines</a> carefully, We'll guide you through all details you need.
