--- a/final_project/index.html
+++ b/final_project/index.html
@@ -301,7 +301,7 @@ vision algorithms including SISR....
 
   
     <a style="margin-right: 10px" title="Go to the Github page" 
-      href="https://github.com/tahasamavati/iust-deep-learning-final-project>
+      href="https://github.com/tahasamavati/iust-deep-learning-final-project">
        <i class="fab fa-github"></i> Code 
       </a>
   
